# TrikonED

./: .env-local  .gitignore  FINAL_README.md  Makefile  README.md  START_HERE.md  TEMPLATES_COMPLETE.md  create_superuser.py  generate_apps.py  init_project.sh  package-lock.json  package.json  populate_data.py  pyproject.toml  setup.sh  setup_complete.sh  tailwind.config.js
applications/: admin.py  application_form_views.py  forms.py  models.py  urls.py  utils.py  views.py  wizard_views.py
applications/migrations/: 0001_initial.py  0002_application_application_id.py  0003_acceptedapplication_pendingapplication_and_more.py  0004_application_custom_status_message_and_more.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  backends.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_country_core_countr_iso_cod_9f5dac_idx_and_more.py
programs/: admin.py  models.py  urls.py  views.py
programs/migrations/: 0001_initial.py  0002_alter_tuitionfee_options_and_more.py  0003_alter_tuitionfee_program.py  0004_program_slug.py  0005_englishrequirement_extra_requirements.py  0006_alter_englishrequirement_options_and_more.py
static/css/: input.css
students/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_alter_studentuniversityvisit_options_and_more.py
templates/base/: base.html
templates/components/: footer.html  navbar.html
templates/core/: about.html  contact.html  landing.html
universities/: admin.py  apps.py  models.py  urls.py  views.py
(+30 files in other folders)
