[project]
name = "trikoned"
version = "0.1.0"
description = "TrikonED - UAE University Application Portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.8",
    "django-environ==0.11.2",
    "pillow==10.1.0",
    "uvicorn==0.24.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "django-crispy-forms==2.1",
    "crispy-tailwind==1.0.3",
    "whitenoise==6.6.0",
    "reportlab>=4.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "universities", "programs", "students", "applications"]
